expertise.css
.expertise {
  min-height: 100%;
  display: grid;
  grid-template-columns: 1fr repeat(3, 28vw) 1fr;
  grid-template-rows: 1fr 80% 1fr;
  grid-column-gap: 3%;
  grid-template-areas: 
    ". . . . ."
    ". a b c ."
    ". . . . .";
  text-align: center;
  padding-bottom: 40px;
}

.expertise > * {
  margin: 5% 0 5% 0;
}

.expertise > *:first-child {
  grid-area: a;
}

.expertise > *:nth-child(2) {
  grid-area: b;
}

.expertise > *:last-child {
  grid-area: c;
}

@media (max-width: 1050px) {
  .expertise {
    grid-template-columns: 1fr 90vw 1fr;
    grid-template-rows: repeat(3, auto);
    grid-template-areas:
      ". a ."
      ". b ."
      ". c .";
  }

  .expertise > * {
    margin: 0;
    margin-top: 5%;
  }

  .expertise > *:last-child {
    margin-bottom: 5%;
  }
}

.competence-block {
  border-radius: 3px;
}

.competence-title {
  font-weight: bold;
  text-align: center;
  padding-top: 3%;
  color: #accd7e;
}

.competence-title.personal {
  display: none;
}

.competence-title-border {
  height: 1px;
  width: 90%;
  background: #a7c35b;
  margin: 3px auto 0 auto;
  -webkit-filter: blur(1px);
  -moz-filter: blur(1px);
  -o-filter: blur(1px);
  -ms-filter: blur(1px);
  filter: blur(1px);
}

.competence-description {
  color: #CCC;
  font-size: 120%;
  text-align: left;
  padding: 0 6%;
}

.competence-description.personal {
  display: none;
}

@media (min-width: 668px) {
  .competence-title {
    font-size: 180%;
  }
}

@media (max-width: 667px) {
  .competence-title {
    font-size: 150%;
  }
}

